--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable invoice-table ">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable invoice-table ">
           <thead>
             <tr>
               <th>Awb Number</th>              
