--- a/views/pages/fleet/airport/list.ejs
+++ b/views/pages/fleet/airport/list.ejs
@@ -10,7 +10,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="airportTable" class="display table table-striped dataTable table-hover">
+          <table id="airportTable" class="display table table-striped dateRangeFilterTable dataTable table-hover">
             <thead>
               <tr>
                 <th>Name</th>
