--- a/views/pages/fleet/compartment/list.ejs
+++ b/views/pages/fleet/compartment/list.ejs
@@ -10,7 +10,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable compartment-table">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable compartment-table">
           <thead>
             <tr>
               <th>Name</th>
