--- a/views/pages/fleet/plane/list.ejs
+++ b/views/pages/fleet/plane/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable plane-table">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable plane-table">
           <thead>
             <tr>
               <th>Tail Number</th>
