--- a/views/pages/store/store-check-in.ejs
+++ b/views/pages/store/store-check-in.ejs
@@ -77,7 +77,7 @@
 			</div>
 		</div>
             <div class="table-responsive">
-              <table id='albonyList-table' class='display table table-striped  storeCheckInTable table-hover dataTable'>
+              <table id='albonyList-table' class='display table table-striped  storeCheckInTable table-hover dateRangeFilterTable dataTable'>
 				<thead>
 					<tr>
 						<th>Location</th>
