--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -20,7 +20,7 @@
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
             <div class="table-responsive">
-              <table id='awb-table' class='display table table-striped table-hover dataTable'>
+              <table id='awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
@@ -72,7 +72,7 @@
           <!-- Nodocs -->
           <div class="tab-pane fade" id="awb-no-docs" role="tabpanel" aria-labelledby="awb-no-docs-tab">
             <div class="table-responsive">
-              <table id='no-docs-table' class='display table table-striped table-hover dataTable'>
+              <table id='no-docs-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
@@ -118,7 +118,7 @@
           <!-- Pending Awbs -->
           <div class="tab-pane fade" id="awb-no-packages" role="tabpanel" aria-labelledby="awb-no-packages-tab">
             <div class="table-responsive">
-                <table id='pending-awb-table' class='display table table-striped table-hover dataTable'>
+                <table id='pending-awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
@@ -172,7 +172,7 @@
           <!-- Pickups Awbs -->
           <div class="tab-pane fade" id="awb-pickups" role="tabpanel" aria-labelledby="awb-pickups-tab">
             <div class="table-responsive">
-                <table id='pickup-awb-table' class='display table table-striped table-hover dataTable'>
+                <table id='pickup-awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
