--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -7,7 +7,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table id='no-docs-table' class='display table table-striped table-hover dataTable'>
+        <table id='no-docs-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
           <thead>
             <tr>
               <th>Customer Name</th>
