--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -28,7 +28,7 @@
         </div>
         <div class="table-responsive">
         <table id="pricelabel-table"
-          class="display table table-striped table-hover dataTable pricelabel-table">
+          class="display table table-striped table-hover dataTable dateRangeFilterTable pricelabel-table">
           <thead>
             <tr>
               <th></th>
