--- a/views/pages/warehouse/container/list.ejs
+++ b/views/pages/warehouse/container/list.ejs
@@ -10,7 +10,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="containerTable" class="display table dataTable table-striped table-hover">
+          <table id="containerTable" class="display table dataTable table-striped  dateRangeFilterTable table-hover">
             <thead>
               <tr>
                 <th>Name</th>
