--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -12,7 +12,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="cubeTable" class="display table dataTable table-striped table-hover">
+          <table id="cubeTable" class="display table dataTable table-striped dateRangeFilterTable table-hover">
             <thead>
               <tr>
                 <th>ID</th>
