--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -11,7 +11,7 @@
                 </div>
                 <div class="card-body daterangepickerbody">
                     <div class="table-responsive">
-                    <table class="display table table-striped table-hover dataTable delivery-table">
+                    <table class="display table table-striped table-hover dateRangeFilterTable dataTable delivery-table">
                         <thead>
                             <tr>
                                 <th>Delivery #</th>
