--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -106,7 +106,7 @@
                 </div>
                 <div class='row mt-3 daterangepickerbody'>
                     <div class='col-md-12 table-responsive'>
-                        <table id='packageTable' class='display table table-striped table-hover w-100'>
+                        <table id='packageTable' class='display dateRangeFilterTable table table-striped table-hover w-100'>
                             <thead>
                                 <tr>
                                     <td><strong>Compartment</strong></td>
