--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -10,7 +10,7 @@
                 </div>
                 <div class="card-body daterangepickerbody">
                     <div class="table-responsive">
-                        <table id="package-table" class="display table table-striped table-hover dataTable package-table">
+                        <table id="package-table" class="display table table-striped table-hover dateRangeFilterTable dataTable package-table">
                             <thead>
                                 <tr>
                                     <th>Customer Name</th>
