--- a/views/pages/warehouse/package/no-docs.ejs
+++ b/views/pages/warehouse/package/no-docs.ejs
@@ -6,7 +6,7 @@
         <h4 class="card-title"><%=title%></h4>
       </div>
       <div class="card-body daterangepickerbody">
-        <table id='package-table' class='display table-responsive table table-striped table-hover dataTable package-table'>
+        <table id='package-table' class='display table-responsive table table-striped table-hover dateRangeFilterTable dataTable package-table'>
           <thead>
             <tr>
               <th>Customer Name</th>
