--- a/views/pages/admin/customers/list.ejs
+++ b/views/pages/admin/customers/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="customerTable" class="display table dataTable table-striped table-hover">
+          <table id="customerTable" class="display table dataTable dateRangeFilterTable table-striped table-hover">
             <thead>
               <tr>
                 <th>Company</th>
