--- a/views/pages/admin/location/list.ejs
+++ b/views/pages/admin/location/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable location-table ">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable location-table ">
           <thead>
             <tr>
               <th>Company</th>
