--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable user-table">
+        <table class="display table table-striped dateRangeFilterTable table-hover dataTable user-table">
           <thead>
             <tr>
               <th>Role</th>
