--- a/views/pages/admin/zone/list.ejs
+++ b/views/pages/admin/zone/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable zone-table ">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable zone-table ">
           <thead>
             <tr>
               <th>Name</th>
