--- a/views/pages/fleet/vehicle/list.ejs
+++ b/views/pages/fleet/vehicle/list.ejs
@@ -10,7 +10,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable vehicle-table">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable vehicle-table">
           <thead>
             <tr>
               <th>Make</th>
