--- a/views/pages/warehouse/awb/no-docs-packages.ejs
+++ b/views/pages/warehouse/awb/no-docs-packages.ejs
@@ -16,7 +16,7 @@
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
             <div class="table-responsive">
-              <table id='awb-table' class='display no-docs-table table table-striped table-hover dataTable'>
+              <table id='awb-table' class='display no-docs-table table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
                     <tr>
                         <!-- <th><input id="checkall" type="checkbox" class="package-select-all" /></th> -->
@@ -91,7 +91,7 @@
                         <!-- Nodocs -->
                         <div class="tab-pane fade" id="awb-no-docs" role="tabpanel" aria-labelledby="awb-no-docs-tab">
                           <div class="table-responsive">
-                            <table id='no-docs-table' class='display no-docs-table table table-striped table-hover dataTable'>
+                            <table id='no-docs-table' class='display no-docs-table table table-striped table-hover dateRangeFilterTable dataTable'>
                               <thead>
                                 <tr>
                                   <!-- <th><input id="checkall" type="checkbox" class="package-select-all" /></th> -->
