--- a/views/pages/warehouse/carrier/list.ejs
+++ b/views/pages/warehouse/carrier/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="carrierTable" class="display table table-striped table-hover">
+          <table id="carrierTable" class="display table table-striped dateRangeFilterTable table-hover">
             <thead>
               <tr>
                 <!-- <th>ID</th> -->
