--- a/views/pages/warehouse/delivery/preview.ejs
+++ b/views/pages/warehouse/delivery/preview.ejs
@@ -33,7 +33,7 @@
                     <h3 class="card-title text-muted">Packages</h3>
                     <div class="mt-3 daterangepickerbody">
                         <div class="table-responsive">
-                        <table class="display table table-striped table-hover dataTable delivery-package-table">
+                        <table class="display table table-striped table-hover dateRangeFilterTable  dataTable delivery-package-table">
                             <thead>
                                 <tr>
                                     <th>Package ID</th>
