--- a/views/pages/warehouse/hazmat/list.ejs
+++ b/views/pages/warehouse/hazmat/list.ejs
@@ -9,7 +9,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="hazmatTable" class="display table table-striped table-hover">
+          <table id="hazmatTable" class="display table dateRangeFilterTable table-striped table-hover">
             <thead>
               <tr>
                 <th>ID</th>
