--- a/views/pages/warehouse/manifest/incoming.ejs
+++ b/views/pages/warehouse/manifest/incoming.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable manifest-table">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable manifest-table">
           <thead>
             <tr>
               <th>Manifest ID#</th>
