--- a/views/pages/warehouse/paid-type/list.ejs
+++ b/views/pages/warehouse/paid-type/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="paid-typeTable" class="display table dataTable table-striped table-hover">
+          <table id="paid-typeTable" class="display table dataTable dateRangeFilterTable table-striped table-hover">
             <thead>
               <tr>
                 <!-- <th>ID</th> -->
