--- a/views/pages/warehouse/price/list-all.ejs
+++ b/views/pages/warehouse/price/list-all.ejs
@@ -24,7 +24,7 @@
       <div class="card-body">
         <div class="table-responsive">
         <table id="pricelabel-table"
-          class="display table table-striped table-hover dataTable pricelabel-table">
+          class="display table table-striped table-hover dateRangeFilterTable dataTable pricelabel-table">
           <thead>
             <tr>
               <th></th>
