--- a/views/pages/warehouse/shipper/list.ejs
+++ b/views/pages/warehouse/shipper/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="shipperTable" class="display dataTable table table-striped table-hover">
+          <table id="shipperTable" class="display dataTable dateRangeFilterTable table table-striped table-hover">
             <thead>
               <tr>
                 <!-- <th>ID</th> -->
