--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -185,7 +185,7 @@
                           </div>
                         </div>
                         <div class="form-group form-show-validation row">
-                          <label for="TotalWet" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Total Price</label>
+                          <label for="TotalWet" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Total Wet</label>
                           <div class="col-lg-8 col-md-8 col-sm-8">
                             <input type="number" class="form-control-plaintext" id="TotalWet" name="TotalWet" placeholder="TotalWet" readonly>
                           </div>
