--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -55,7 +55,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/zones/')) { %> active <% } %>">
 					<a href="/admin/zones/list">
-						<i class="fa fa-map-marker-alt"></i>
+						<i class="fa fa-archive"></i>
 						<p>Zones </p>
 					</a>
 				</li>
