--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -47,6 +47,12 @@
 						<p>Consignee</p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/customerchild/')) { %> active <% } %>">
+					<a href="/admin/customerchild/list">
+						<i class="fa fa-user-tie"></i>
+						<p>Sub Customers</p>
+					</a>
+				</li>
 				<li class="nav-item <% if (page.includes('/locations/')) { %> active <% } %>">
 					<a href="/admin/locations/list">
 						<i class="fa fa-map-marker-alt"></i>
