--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -181,13 +181,15 @@
                         <div class="form-group form-show-validation row">
                           <label for="ServiceVat" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">ServiceVat</label>
                           <div class="col-lg-8 col-md-8 col-sm-8">
-                            <input type="number" class="form-control-plaintext" id="ServiceVat" name="ServiceVat" placeholder="ServiceVat" readonly>
+                            <input type="number" class="form-control" id="ServiceVat" name="ServiceVat" placeholder="ServiceVat">
+                            <span id="serviceVatSpan"></span>
                           </div>
                         </div>
                         <div class="form-group form-show-validation row">
                           <label for="TotalWet" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Total Wet</label>
                           <div class="col-lg-8 col-md-8 col-sm-8">
-                            <input type="number" class="form-control-plaintext" id="TotalWet" name="TotalWet" placeholder="TotalWet" readonly>
+                            <input type="number" class="form-control" id="TotalWet" name="TotalWet" placeholder="TotalWet">
+                            <span id="totalWetSpan"></span>
                           </div>
                         </div>
                       </div>
