--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -204,7 +204,7 @@
                   <div class="form-group form-show-validation row">
                     <label for="Freight" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Freight </label>
                     <div class="col-lg-7 col-md-8 col-sm-8">
-                      <input type="number" class="form-control-plaintext" id="Freight" name="Freight"
+                      <input type="number" class="form-control" id="Freight" name="Freight"
                         placeholder="Freight">
                     </div>
                   </div>
