--- a/views/pages/warehouse/awb/no-docs-packages.ejs
+++ b/views/pages/warehouse/awb/no-docs-packages.ejs
@@ -25,6 +25,8 @@
                         <th>AWB</th>
                         <th>Original Tracking No</th>
                         <th>Package No</th>
+                        <th>Aging</th>
+                        <th>Aging $</th>
                         <th>Description</th>
                         <th>Zone</th>
                         <th>Type</th>
@@ -57,6 +59,8 @@
                                 <td><a class="text-decoration-none" href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"><b><%= pkg.express ? '*': '' %></b><%= pkg.awbId.awbId %> </a></td>
                                 <td><%= pkg.originBarcode ? pkg.originBarcode.barcode: ''%></td>
                                 <td><%= pkg.packageNumber ? pkg.packageNumber : ''%></td>
+                                <td><%= pkg.aging ? pkg.aging:'' %></td>
+                                <td>$<%= pkg.agingdollar ? pkg.agingdollar:0 %></td>
                                 <td><%= pkg.description %></td>
                                 <% if (pkg['zoneId'] && pkg['zoneId'].name) { %>
                                   <td><%= pkg['zoneId'].name %>
@@ -134,12 +138,8 @@
                         <td><a class="text-decoration-none" href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"><b><%= pkg.express ? '*': '' %></b><%= pkg.awbId.awbId %> </a></td>
                         <td><%= pkg.originBarcode ? pkg.originBarcode.barcode: ''%></td>
                         <td><%= pkg.packageNumber ? pkg.packageNumber : ''%></td>
-                        <td>
-                          <%= pkg.aging ? pkg.aging:'' %>
-                        </td>
-                        <td>
-                          $<%= pkg.agingdollar ? pkg.agingdollar:0 %>
-                        </td>
+                        <td><%= pkg.aging ? pkg.aging:'' %></td>
+                        <td>$<%= pkg.agingdollar ? pkg.agingdollar:0 %></td>
                         <td><%= pkg.description %></td>
                     <% if (pkg['zoneId'] && pkg['zoneId'].name) { %>
                       <td><%= pkg['zoneId'].name %>
