--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -42,7 +42,7 @@
                     <%=title%>
                 </h4>
             </div>
-<<<<<<< Updated upstream
+<!-- <<<<<<< Updated upstream -->
             <div class="card-body">
                 <h3 class="card-title text-muted">Plane</h3>
                 <div class='row'>
