--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -79,7 +79,7 @@
                                                         <%= pkg.lastStatusText %>
                                                     </td>
                                                     <td>
-                                                        <a href="../awb/manage/<%=pkg.awbId._id%>/preview">
+                                                        <a href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview">
                                                             <%= pkg.awbId.awbId %>
                                                         </a>
                                                     </td>
