--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -161,6 +161,13 @@
                     </div>
                   </div>
                   <div class="form-group form-show-validation row">
+                    <label for="VAT Multiplier" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">VAT Multiplier </label>
+                    <div class="col-lg-8 col-md-8 col-sm-8">
+                      <input type="number" class="form-control" id="VatMultiplier" name="VatMultiplier"
+                        placeholder="VAT Multiplier">
+                    </div>
+                  </div>
+                  <div class="form-group form-show-validation row">
                     <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Total Invoice Value</label>
                     <div class="col-lg-8 col-md-8 col-sm-8">
                       <input type="number" id="total-value-invoice" class="form-control"  placeholder="Total Invoice Value">
