--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,14 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>9-5 Admin Portal</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-	<link rel="icon" href="../img/favicon.png" type="image/x-icon" />
+	<link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 
 	<!-- Fonts and icons -->
-	<script src="../assets/js/plugin/webfont/webfont.min.js"></script>
+	<script src="/assets/js/plugin/webfont/webfont.min.js"></script>
 	<script>
 		WebFont.load({
 			google: { "families": ["Lato:300,400,700,900"] },
-			custom: { "families": ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['../assets/css/fonts.min.css'] },
+			custom: { "families": ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['/assets/css/fonts.min.css'] },
 			active: function () {
 				sessionStorage.fonts = true;
 			}
@@ -20,8 +20,8 @@
 	</script>
 
 	<!-- CSS Files -->
-	<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../assets/css/atlantis.min.css">
+	<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/css/atlantis.min.css">
 </head>
 
 <body class="login">
@@ -33,7 +33,7 @@
 		</div>
 		<div class="login-aside w-50 d-flex align-items-center justify-content-center bg-white">
 			<div class="container container-login container-transparent animated fadeIn">
-				<img src="../img/logo.jpg">
+				<img src="/img/logo.jpg">
 				<h3 class="text-center mt-3">Sign In To Customer</h3>
 				<form id="customer-login-form">
 					<div class="login-form">
@@ -68,14 +68,14 @@
 		</div>
 	</div>
 
-	<script src="../assets/js/core/jquery.3.2.1.min.js"></script>
-	<script src="../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-	<script src="../assets/js/core/popper.min.js"></script>
-	<script src="../assets/js/core/bootstrap.min.js"></script>
-	<script src="../assets/js/atlantis.min.js"></script>
-	<script src="../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-	<script src="../assets/js/global-search.js"></script>
-	<script src="../js/customer/login.js"></script>
+	<script src="/assets/js/core/jquery.3.2.1.min.js"></script>
+	<script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+	<script src="/assets/js/core/popper.min.js"></script>
+	<script src="/assets/js/core/bootstrap.min.js"></script>
+	<script src="/assets/js/atlantis.min.js"></script>
+	<script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+	<script src="/assets/js/global-search.js"></script>
+	<script src="/js/customer/login.js"></script>
 </body>
 
 </html>
