--- a/views/pages/customerDashboard.ejs
+++ b/views/pages/customerDashboard.ejs
@@ -1,213 +1,224 @@
 <% layout('./shared/__template')%>
+<style>
+  table.dataTable tbody>tr.selected,
+  table.dataTable tbody>tr>.selected {
+    background-color: #0275d8;
+  }
 
+  table.dataTable tbody tr.selected,
+  table.dataTable tbody th.selected,
+  table.dataTable tbody td.selected {
+    color: white;
+  }
 
-<div class="row justify-content-center mt--5">
-  <input type="hidden" data-id="<%= awb._id%>" id="awbId">
-  <div class="col-12 col-lg-10 col-xl-9">
-    <div class="row align-items-center">
-      <div class="ml-auto mr-3 mb-3 mt--4">
-        <!-- <a class="btn btn-danger btn-round text-white" href="/warehouse/download-pdf/pkg/<%=awb._id%>"> Download Pkgs</a> -->
-        <!-- <a class="btn btn-danger btn-round text-white ml-2 btn-print-pkgs" data-id="<%=awb._id%>"> Print Pkgs </a> -->
-        <a class="btn btn-danger btn-round text-white" href="/warehouse/download-pdf/awb/<%=awb._id%>"> Download PDF</a>
-        <!-- <a class="btn btn-danger btn-round text-white ml-2 btn-print-awb" data-toggle="modal" data-id="<%=awb._id%>" -->
-          <!-- data-target="#print-popup"> Print AWB </a> -->
+  table.dataTable .dataTables_info .select-info {
+    display: block;
+  }
+</style>
+<div class="gutters">
+  <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
+    <div class="card">
+      <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
+        <div class="card-title"><%= title %></div>
       </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card card-invoice">
-          <div class="card-header">
-            <div class="invoice-header">
-              <h3 class="invoice-title">AirWay Bill</h3>
-              <div class="invoice-logo">
-                <img src="/img/logo.jpg" alt="company logo">
-              </div>
-            </div>
-            <div class="invoice-desc">
-              Airport Industrial Park, P.O. Box AP 59239<br>
-              Nassau, The Bahamas<br>
-              F: (242) 377-3587
-            </div>
-          </div>
-          <div class="card-body">
-            <div class="separator-solid"></div>
-            <!-- <div class="row">
-              <div class="col-md-4 info-invoice">
-                <h5 class="sub">Date</h5>
-                <p><%= awb.dateCreated%></p>
-              </div>
-              <!-- <div class="col-md-3 info-invoice">
-                <h5 class="sub">Created By</h5>
-                <p><%= awb.dateCreated%></p>
-              </div> --
-              <div class="col-md-4 info-invoice">
-                <h5 class="sub">Bill ID</h5>
-                <p><%= "AWB #"+awb.createdBy %></p>
-              </div>
-              <div class="col-md-4 info-invoice">
-                <h5 class="sub">Customer</h5>
-                <p><%=helpers.getFullName(awb.customerId)%></p>
-                <p><%=helpers.getFullAddress(awb.customerId)%></p>
+      <div class="card-body daterangepickerbody">
+        <div class="table-responsive p-4">
+          <table id="package-table"
+            class="display dateRangeFilterTable table table-striped table-hover dataTable package-table">
+            <thead>
+              <tr>
+                <th><input id="checkall" type="checkbox" class="package-select-all" /></th>
+                <th>Created Date</th>
+                <!-- <th>Customer Name</th> -->
+                <th>AWB</th>
+                <!-- <th>Original Tracking No</th> -->
+                <!-- <th>Package No</th> -->
+                <!-- <th>Description</th> -->
+                <!-- <th>Zone</th> -->
+                <!-- <th>Type</th> -->
+                <th>Price</th>
+                <th>Number of Pieces</th>
+                <!-- <th>AirwareBillDate</th> -->
+                <!-- <th>ActualFlight</th> -->
+                <th>View Details</th>
+                <th>View Invoice</th>
+                <!-- <th></th> -->
+              </tr>
+            </thead>
+            <tbody>
+              <% awbs.forEach(function(pkg){ %>
+              <tr data-record="<%= pkg._id %>">
+                <td>
+                  <input type="checkbox" name="package-select" class="package-select" />
+                </td>
+                <td><%= helpers.formatDate(pkg.createdAt) %></td>
+                <!-- <% if (pkg['customerId']) { %>
+                <td><%= (pkg['customerId'].lastName ? 
+                  `${pkg['customerId'].firstName} ${pkg['customerId'].lastName}` : 
+                  `${pkg['customerId'].firstName}`); %>
+                </td>
+                <% } else { %>
+                  <td> - </td>
+                  <% } %> -->
+                <td>
+                  <%= pkg.awbId %>
+                </td>
 
-              </div>
-            </div> -->
+                <td><%= pkg.price%></td>
+                <td><%= pkg.packages.length %></td>
+                <td>
+                    <a href="/warehouse/nas/awb/manage/<%=pkg.awbId ? pkg._id: '#'%>/preview" class="btn btn-link btn-primary px-3" data-toggle="tooltip"
+                      data-original-title="View Details"> <i class="fa fa-eye"></i> </a>
+                </td>
+                <td>
+                  <a href="/warehouse/nas/awb/manage/<%=pkg.awbId ? pkg._id: '#'%>/invoice" class="btn btn-link btn-primary px-3" data-toggle="tooltip"
+                    data-original-title="View Invoice"> <i class="fa fa-info"></i> </a>
+              </td>
 
-            <% awb.invoices.forEach(invoice => { %>
-              <div class="row">
-                  <div class="col-md-4 info-invoice">
-                      <h5 class="sub">Date</h5>
-                      <p><%= invoice.dateCreated%></p>
-                    </div>
-                    <div class="col-md-4 info-invoice">
-                        <h5 class="sub">Invoice Id</h5>
-                        <p><%= invoice.number%></p>
-                      </div>
-                      <div class="col-md-4 info-invoice">
-                          <h5 class="sub">Customer</h5>
-                          <p><%=helpers.getFullName(awb.customerId)%></p>
-                          <p><%=helpers.getFullAddress(awb.customerId)%></p>
-          
-                        </div>
-           
-              </div>
-              <div class="separator-solid"></div>
-              <% }) %>
-
-
-            <!-- <div class="row">
-              <div class="col-sm-7 col-md-5 mb-3 mb-md-0 transfer-to">
-                <h5 class="sub">Shipper</h5>
-                <div class="account-transfer">
-                  <div><span>Shipper Name:</span><span><%= shipper.name%></span></div>
-                  <div><span>Shipper Phone:</span><span><%= shipper.telephone%></span></div>
-                </div>
-              </div>
-              <div class="col-sm-7 col-md-5 mb-3 mb-md-0 transfer-to ml-auto">
-                <h5 class="sub">Carrier</h5>
-                <div class="account-transfer">
-                  <div><span>Carrier Name:</span><span><%= carrier.name %></span></div>
-                  <div><span>Carrier Phone:</span><span><%= carrier.telephone%></span></div>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="separator-solid"></div> -->
-            <div class="row">
-              <div class="col-md-12">
-                <div class="invoice-detail">
-                  <div class="invoice-top">
-                    <h3 class="title"><strong>Package Summary </strong></h3>
-                  </div>
-                  <div class="invoice-item">
-                    <div class="table-responsive">
-                      <table class="table table-striped">
-                        <thead>
-                          <tr>
-                            <td><strong>S.No</strong></td>
-                            <td><strong>Tracking No</strong></td>
-                            <td class="text-center"><strong>Description</strong></td>
-                            <td class="text-center"><strong>Type</strong></td>
-                            <!-- <td class="text-center"><strong>Dimensions</strong></td> -->
-                            <td class="text-right"><strong>Weight</strong></td>
-                            <!-- <td></td> -->
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <% var totalWeight = 0;
-                          awb.packages.forEach((package,pick) => {
-                            totalWeight += Number(package.weight);
-                          %>
-                          <tr>
-                            <td>Piece#<%= pick + 1%></td>
-                            <td><%= package.trackingNo%></td>
-                            <td class="text-center"><%= package.description%></td>
-                            <td class="text-center"><%= package.packageType%></td>
-                            <!-- <td class="text-center"><%= package.dimensions%></td> -->
-                            <td class="text-right"><%= Number(package.weight).toFixed(2)%>
-                              <%= package.packageCalculation||'kg' %></td>
-                              <!-- <td class="text-center">
-                                <a
-                                    class="btn btn-link btn-primary btn-print-pkg"
-                                    data-toggle="modal"
-                                    data-id="<%=package._id%>"
-                                    data-original-title="Print Label"
-                                    data-target="#print-popup"
-                                  ><i class="fa fa-print"></i>
-                                </a>
-                              </td> -->
-                          </tr>
-                          <% }) %>
-                          <tr>
-                            <td class="text-left"><strong>Total Pieces</strong></td>
-                            <td class="text-center"><%= awb.packages.length%></td>
-                            <td></td>
-                            <td class="text-center"><strong>Total Weight</strong></td>
-                            <td class="text-right"><%= totalWeight.toFixed(2)%> lbs</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-                <div class="separator-solid  mb-3"></div>
-              </div>
-            </div>
-          </div>
-          <div class="card-footer">
-            <div class="row">
-              <div class="col-sm-7 col-md-5 mb-3 mb-md-0 transfer-to">
-                <h5 class="sub">HAZMAT</h5>
-                <div class="account-transfer">
-                  <div>
-                    <span>
-                      Class:
-                    </span>
-                    <span>
-                      <% if (hazmat) { %>
-                      <%= hazmat.description %>
-                      <% } %>
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-5 col-md-7 transfer-total">
-                <h5 class="sub">Total Amount</h5>
-                <div class="price">$<%= awb.invoices.reduce((acc, i) => acc + (!isNaN(i.value) ? Number(i.value) : 0) , 0).toFixed(2) %></div>
-                <% if(Number(awb.isSed) == 1) { %>
-                <span>SED Included</span>
-                <% } %>
-              </div>
-            </div>
-            <!-- <div class="separator-solid"></div> -->
-            <div class="row">
-              <!-- <div class="col-sm-7 col-md-5 mb-3 mb-md-0 transfer-to">
-                <h5 class="sub">Plane</h5>
-                <div class="account-transfer">
-                </div>
-              </div> -->
-              <div class="col-sm-7 col-md-5 mb-3 mb-md-0 transfer-to ml-auto">
-                <h5 class="sub"></h5>
-                <div class="account-transfer">
-                </div>
-              </div>
-            </div>
-            <div class="separator-solid"></div>
-            <p>
-              <strong>Creator of AWB</strong>: <%= awb.createdBy %> </br>
-              <strong>Date/Time of Creation</strong>: <%= awb.dateCreated %>
-            </p>
-          </div>
+              </tr>
+              <%})%>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="add-to-manifest-modal" tabindex="-1" role="dialog" aria-labelledby="print-popup"
+  aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <form id="add-to-manifest-form" method="post">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Add packages to Manifest</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" hidden name="packageIds" />
+          <div class="form-group">
+            <label for="manifestId">Manifest</label>
+            <select id="manifestId" name="manifestId" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="compartmentId">Compartment</label>
+            <select id="compartmentId" name="compartmentId" class="form-control" required disabled>
+              <option></option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+<!-- Add Packages To nodoc -->
+<div class="modal fade" id="add-to-nodoc-modal" tabindex="-1" role="dialog" aria-labelledby="print-popup"
+  aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <form id="add-to-nodoc-form" method="post">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Add Packages to NoDoc</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" hidden name="packageIds" />
+          <div class="form-group">
+            <label for="location">Location</label>
+            <select id="location" name="location" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="zoneId">Zone</label>
+            <select id="zoneId" name="zoneId" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+<!-- Add Packages To Cube -->
+<div class="modal fade" id="add-to-cube-modal" tabindex="-1" role="dialog" aria-labelledby="print-popup"
+  aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <form id="add-to-cube-form" method="post">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Add packages to Cube</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" hidden name="packageIds" />
+          <div class="form-group">
+            <label for="CubeId">Cube</label>
+            <select id="CubeId" name="CubeId" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="modal fade" id="add-to-delivery-modal" tabindex="-1" role="dialog" aria-labelledby="print-popup"
+  aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <form id="add-to-delivery-form" method="post">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Add packages to Delivery</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" hidden name="packageIds" />
+          <div class="form-group">
+            <label for="deliveryId">Delivery</label>
+            <select id="deliveryId" name="deliveryId" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
 <div class="modal fade" id="print-popup" tabindex="-1" role="dialog" aria-labelledby="print-popup" aria-hidden="true"
   style="display: none;">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h2 class="modal-title" id="exampleModalLabel2">Print AirWay Bill</h2>
+        <h2 class="modal-title" id="exampleModalLabel2">Print Package Label</h2>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
@@ -219,14 +230,12 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary print-awb print-package" id='print-awb'>Print</button>
+        <button type="button" class="btn btn-primary print-package" id="print-package">
+          Print
+        </button>
       </div>
     </div>
   </div>
 </div>
-
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
-<% block('scripts').append('<script src="/js/warehouse/awb/preview.js"></script>')%>
-
-
-
+<% block('scripts').append('<script src="/js/warehouse/package/list-all.js"></script>')%>
