--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -391,7 +391,7 @@
 					</div>
 				</li>
 				<li class="nav-item">
-					<a id="logout" href="/logout">
+					<a id="logout" href="/logout<% if (user.roles[0].type == "Customers") { %>?type=customer<%}%>">
 						<i class="fa fa-sign-out-alt"></i>
 						<p>Logout </p>
 					</a>
