--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -170,7 +170,14 @@
                   <div class="form-group form-show-validation row">
                     <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Total Invoice Value</label>
                     <div class="col-lg-8 col-md-8 col-sm-8">
-                      <input type="number" id="total-value-invoice" class="form-control"  placeholder="Total Invoice Value">
+                      <input type="number" id="total-value-invoice" class="form-control" disabled="true" placeholder="Total Invoice Value">
+                    </div>
+                  </div>
+
+                  <div class="form-group form-show-validation row">
+                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Invoice Value</label>
+                    <div class="col-lg-8 col-md-8 col-sm-8">
+                      <input type="number" id="override-value-invoice" class="form-control"  placeholder="Invoice Value">
                     </div>
                   </div>
                   <div class="form-group form-show-validation row">
