--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -175,7 +175,9 @@
                   </div>
 
                   <div class="form-group form-show-validation row">
-                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Invoice Value</label>
+                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Override Invoice 
+                      <br>
+                      Value</label>
                     <div class="col-lg-8 col-md-8 col-sm-8">
                       <input type="number" id="override-value-invoice" class="form-control"  placeholder="Invoice Value">
                     </div>
