--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -182,6 +182,14 @@
                       <input type="number" id="override-value-invoice" class="form-control"  placeholder="Invoice Value">
                     </div>
                   </div>
+
+                  <div class="form-group form-show-validation row">
+                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Sum of All Charges</label>
+                    <div class="col-lg-8 col-md-8 col-sm-8">
+                      <input type="number" id="sum-of-charges" class="form-control" disabled="true"  placeholder="Sum of charges">
+                    </div>
+                  </div>
+
                   <div class="form-group form-show-validation row">
                     <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right"></label>
                     <div class="col-lg-8 col-md-8 col-sm-8">
