--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -184,7 +184,7 @@
                   </div>
 
                   <div class="form-group form-show-validation row">
-                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Sum of All Charges</label>
+                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Final Price</label>
                     <div class="col-lg-8 col-md-8 col-sm-8">
                       <input type="number" id="sum-of-charges" class="form-control" disabled="true"  placeholder="Sum of charges">
                     </div>
