--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -783,7 +783,7 @@
           </div>          
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger close-del" onclick="openAddPackage()" data-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary" id='save-barcode'>Create</button>
         </div>
       </div>
